public/stylesheets/scss/app.scss
/* ... */
.inner_page * {
  .page {
      border: 1px solid; 
      margin: 2px;
  }
  .content {
    padding-bottom: 0.5em;
  }
}

/* CSS for Manage Classes Page*/

.invisible_modal
{
     display: none;
     position: absolute;
     left: 0px;
     top: 0px;
     width:100%;
     height:100%;
     text-align:center;
     z-index: 1000;
     background-color:#FFFFFF;
     opacity: 0.5;
     filter: alpha(opacity=50);
     cursor: wait;
     zoom: 1;
}

.invisible_modal.show
{
  display: block;
}

.total_Class_summary
{
    font-weight:bold;
    font-size: 1.3em;
    color: #000000;
    display:inline;
    float: left;
    padding-top: 20px;
}

.class_list_element
{
  div
  {
    float: left;
  }
  table
  {
    margin: 0;
  }
  a{
    margin-top: 5px;
  }
  input
  {
    display: inline;
    width: 50px;
    margin: 6px;
    border: 0;
  }
  label
  {
    font-weight:bold;
    font-size: 1.3em;
    color: #000000;
    display:inline;
    text-transform: none;
  }
  
}


.class_list_element_container
{
  width:500px;
  table
  {
    td
    {
      vertical-align: middle;
    }
  }
}

.manage_classes_panel
{
  #sortable li label{ 
    margin: 0; 
    padding: 3px 0px 0px 0px ;
    cursor:move ;
    height:auto;
    }
    #sortable { list-style-type: none; margin: 0; padding: 0;width:auto; }
}

.right_float
{
  float: right;
  bottom: 0;
  input {
  border: 0 solid #f3951d;
  color: white;
  display: inline;
  font: 12px / 1 Arial, Helvetica, sans-serif;
  padding: 4px 5px;
  /* CSS 3 */
  background: -webkit-gradient(linear, left top, left bottom, from(#f3951d), to(#dd6e0d));
  background: -moz-linear-gradient(top, #f3951d, #dd6e0d);
  _background: #f6f2e2;
  border-radius: 12px;
  /* Opera 10.5, IE 9 */
  -moz-border-radius: 12px;
  /* FF1+ */
  -webkit-border-radius: 12px;
  /* Saf3+, Chrome */ }
}

.bottom_options
{
  button
  {
    display: inline;
  }
}

.clear_both
{
  clear:both;
}

.main_manage_classes_container{padding:10px 10px 10px 10px;background-color:White;-moz-border-radius: 20px; -webkit-border-radius: 20px;-khtml-border-radius: 20px;border-radius: 20px}

.popup_content
{
  padding: 20px 20px 20px 20px;
  textarea
  {
    width: 350px;
  }
  
  td
  {
    padding-top: 10px; 
  }
}

/* ---- END CSS for Manage Classes Page ------*/



/* ---- CSS for Student roster page -----*/

table.teacher_class_table th, table.teacher_class_table td
{
    border: 1px solid #242323;
    padding-left:10px;
    /*text-align: center !important; /*Forcely added !important as in Action_menu_tab.scss Align Left is marked !important*/
   
   .change_password
  {
    padding-left:20px;
  }
  
  .remove_student
  {
    padding-left:20px;
  }
}

.floatR
{
  float : right;
}

.floatL
{
  float : left;
}

.clearBoth
{
  clear : both;
}

.classsetupform { 
  width: 100%; text-align: left;
  #sortable li label{ 
    margin: 0; 
    padding: 3px 0px 0px 0px ;
    cursor:move ;
    height:auto;
    }
}
.classsetupform tr { vertical-align: top; }
.classsetupform td { padding-top: 10px; padding-left: 10px; }
.classsetupform td:nth-child(odd) { width: 112px !important;}
.classsetupform td.title{ width: 80px;}
.classsetupform table { margin: 0;}
.classsetupform table td { text-align:left;padding:0px 5px 0px 5px}

.offerings{text-align:left;margin:0}
.offerings tr { vertical-align: top; }
.offerings td { text-align:left; vertical-align:middle;padding:0 }
.offerings td:nth-child(odd) { width: 20px !important;padding-top:5px}

.teachers_listing{text-align:left;margin:0}
.teachers_listing tr { vertical-align: top; }
.teachers_listing td { text-align:left; vertical-align:middle;padding:0 }
.teachers_listing td:nth-child(odd) { width: 20px !important;padding-top:5px}

.studentlist{text-align:left;margin:0}
.studentlist tr { vertical-align: middle; }
.studentlist td { text-align:left; vertical-align:middle;padding:2px 0 }
.studentlist td.studentname { text-align:left; vertical-align:middle;padding:2px 0; min-width:150px }

#student_roster{padding-right:10px}
#student_roster #student_id_selector{width:294px !important}
#student_roster #students_listing{padding-right:0px !important}

table.add_student, table.roster_student_list{margin:0;clear:both;}
table.roster_student_list .action_link_container{width:235px;padding-left:0px}
table.roster_student_list a.change_password{padding-left:10px}

.contentdiv{float:left;}
.linkdiv{float:right;}

.header{padding-left: 10px;color:#3A878B;font-size:20px;font-weight:bold;clear:both}
.subheader{color:#3A878B;font-size:16px;font-weight:bold}
.labelvalue{font-weight:bold;padding-left:5px}
.classdata{float:right;text-align:left}
.classdata label{text-transform:none}
.classsummary{padding-left: 10px;float:left;text-align:left}
.classdata td:nth-child(odd) { padding-left: 20px; text-align: left; }
td.title { padding-left: 20px; text-align: left; }
.maincontainer{padding:10px 10px 10px 10px;background-color:White;-moz-border-radius: 20px; -webkit-border-radius: 20px;-khtml-border-radius: 20px;border-radius: 20px;min-height:600px}

#sortable { list-style-type: none; margin: 0; padding: 0; width: 80%; }
#sortable li { margin: 0 0px 5px 0px; padding: 0.4em;cursor:move }
#sortable li label { padding-top:0 }
#sortable td {vertical-align:top }
#sortable td.offering_name{padding-top:2px}

a.hlink{color:#479492;text-decoration:none;cursor:pointer}
a.hlink:hover{color:#DA5936;text-decoration:none;cursor:pointer}

.pie{position: relative;}

#setup_flash_message_div{
  color:black;
  font-weight:bold;
}
#teacher_id_selector
{
  width:250px;
}

/* CSS classes to display scrollbars on Mac OS X Lion */
.webkit_scrollbars::-webkit-scrollbar {
    -webkit-appearance: none;
    width: 11px;
    height: 11px;
}
.webkit_scrollbars::-webkit-scrollbar-thumb {
    border-radius: 8px;
    border: 2px solid white; /* should match background, can't be transparent */
    background-color: rgba(0, 0, 0, .5);
}

.no_recent_activity
{
  font-style: italic;
  text-align: center;
}
#teacher_id_selector
{
  width:250px;
}
/* ... */

